style.css
body {
    font-family: Arial, sans-serif;
    line-height:130%;
}

date {
    color: #666;
}

p {
    font-size: 16px;
    line-height: 24px;
}

.photo-credit {
    font-size: 12px;
}

ul {
    line-height: 1.7;
    margin-left: 24px;
    padding: 0;
}

ol {
    line-height: 1.7;
}

li {
    padding-bottom: 10px;
}

a {
    color:#1278db;
    text-decoration:none;
}

.name a {
    color: white;
}

h1 a {
    color: black;
}
a:hover, a:focus{
    text-decoration: underline;
}

img {
    display:block;
    border: 1px solid #ddd;
    padding: 10px;
    box-shadow: 0 2px 4px #ddd;
    margin: 1em 0;
    width:100%;
}

.narrow-image {
    width:20%;
}

.header {
    background-image:url('/img/texture.jpg');
    text-shadow: 0px 2px 5px black;
}

h1, h2 {
    font-size: 24px;
    padding-bottom: 10px;
    line-height: 100%;
    margin: 30px 0 0 0;
}

.link-group{
    margin-top:10px;
    padding-bottom:20px;
}

.header-text{
    color: white;
    font-size: 20px;
    margin-left: 20px;
}

.navigation {
    padding: 20px 0 25px 30px;
}


.name {
    padding: 50px 0 0 50px;
    font-family: "Gill Sans", Calibri, "Helvetica Neue", Helvetica, Arial, sans-serif;
    font-size: 32px;
    font-weight: normal;
    letter-spacing: 6px;
    text-transform: uppercase;
    color: white;
    display:block;
}

.ie-note{
    float:right;
    font-size:0.9em;
}

.code-sample{
    background-color: #deebf5;
    font-family: "Andale Mono", "Courier New", Courier, monospace;
    font-size: 14px;
    padding: 10px;
}

.code-sample-inline {
    background-color: #deebf5;
    font-family: "Andale Mono", "Courier New", Courier, monospace;
    font-size: 14px;
    padding: 0;
}

.pretty-code-sample {
    border: 1px solid #ddd;
    background: #eee;
    padding: 5px 15px 15px 15px;
}

.quote {
    font-style: italic;
    background: #dee;
    padding: 15px
}

p .pretty-code-sample {
    padding:2px;
}

.blog-post{
    margin-bottom: 30px;
    border-bottom: 1px dotted #333;
}


@media (min-width: 700px) {
  .left-column {
      float:left;
      width: 20%;
      padding: 0 1% 0 1%;
  }

  .right-column {
      float:right;
      width:46%;
      margin-right: 27%;
  }

  .twitter{
      float:right;
      padding-right: 10px;
      font-size:0.9em;
  }
}

.message-container {
    margin: 50px;
}

.embedded {
    position:relative;
    padding-bottom:56.25%;
    padding-top:30px;
    height:0;
    overflow:hidden;
}

.embedded iframe, .embedded object, .embedded embed {
    position:absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
}

